--- a/docs/references/backend/allowlist/get-allowlist-identifier-list.mdx
+++ b/docs/references/backend/allowlist/get-allowlist-identifier-list.mdx
@@ -11,7 +11,7 @@ Retrieves the list of allowlist identifiers.
 function getAllowlistIdentifier: () => Promise<AllowlistIdentifier[]>;
 ```
 
-## `getAllowlistIdentifierList()` Example
+## `getAllowlistIdentifierList()` example
 
 ```tsx
 const response = await clerkClient.allowlistIdentifiers.getAllowlistIdentifierList();
