--- a/docs/references/backend/invitations/get-invitation-list.mdx
+++ b/docs/references/backend/invitations/get-invitation-list.mdx
@@ -17,9 +17,9 @@ function getInvitationList: (params: GetInvitationListParams) => Promise<Invitat
 | --- | --- | --- |
 | `status?` | `accepted /| pending /| revoked` | Filter by invitation status. |
 
-## `getInvitationList()` Examples
+## `getInvitationList()` examples
 
-### `getInvitationList()` with no params
+### `getInvitationList()` with no parameters
 
 ```tsx
 const response = await clerkClient.invitations.getInvitationList();
