--- a/docs/references/backend/organization/create-organization-invitation.mdx
+++ b/docs/references/backend/organization/create-organization-invitation.mdx
@@ -22,7 +22,7 @@ function createOrganizationInvitation: (params: CreateOrganizationInvitationPara
 | `redirectUrl?` | `string` | The URL users will land at once the organization invitation has been accepted. | 
 | `publicMetadata?` | `Record<string, unknown>` | Metadata saved on the invitation that is visible to both your Frontend and Backend APIs. | 
 
-## `createOrganizationInvitation()` Example
+## `createOrganizationInvitation()` example
 
 ```tsx
 const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
