--- a/docs/references/backend/organization/create-organization-membership.mdx
+++ b/docs/references/backend/organization/create-organization-membership.mdx
@@ -19,7 +19,7 @@ function createOrganizationMembership: (params: CreateOrganizationMembershipPara
 | `userId` | `string` | The user ID of the user being added to the organization. |
 | `role` | `string` | The [role](/docs/organizations/roles-permissions) to assign the added user within the organization. |
 
-## `createOrganizationMembership()` Example
+## `createOrganizationMembership()` example
 
 ```tsx
 const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
