--- a/docs/references/backend/organization/create-organization.mdx
+++ b/docs/references/backend/organization/create-organization.mdx
@@ -21,7 +21,7 @@ function createOrganization: (params: CreateParams) => Promise<Organization>;
 | `publicMetadata?` | `Record<string, unknown>` | Metadata saved on the organization, that is visible to both your Frontend and Backend APIs. |
 | `privateMetadata?` | `Record<string, unknown>` | Metadata saved on the organization that is only visible to your Backend API. |
 
-## `createOrganization()` Example
+## `createOrganization()` example
 
 ```tsx
 const name = 'test-org';
