--- a/docs/references/backend/organization/delete-organization.mdx
+++ b/docs/references/backend/organization/delete-organization.mdx
@@ -11,13 +11,13 @@ Deletes an organization given a valid ID.
 function deleteOrganization: (organizationId: string) => Promise<Organization>;
 ```
 
-## `deleteOrganization()` Parameters
+## `deleteOrganization()` parameters
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `organizationId` | `string` | The ID of the organization to delete. |
 
-## `deleteOrganization()` Example
+## `deleteOrganization()` example
 
 ```tsx
 const organizationId = 'org_2b6TtF4XlxDsKo6t0E0UyywGB72';
