--- a/docs/references/backend/organization/get-organization-invitation-list.mdx
+++ b/docs/references/backend/organization/get-organization-invitation-list.mdx
@@ -20,9 +20,9 @@ function getOrganizationInvitationList: (params: GetOrganizationInvitationListPa
 | `limit?` | `number` | The number of results to return. Must be an integer greater than zero and less than 500. |
 | `offset?` | `number` | The number of results to skip. |
 
-## `getOrganizationInvitationList()` Examples
+## `getOrganizationInvitationList()` examples
 
-### `getOrganizationInvitationList()` With No Parameters
+### `getOrganizationInvitationList({ organizationId})`
 
 ```tsx
 const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
@@ -61,7 +61,7 @@ console.log(response);
 */
 ```
 
-### `getOrganizationInvitationList({ status })`
+### `getOrganizationInvitationList({ organizationId, status })`
 
 Retrieves organization invitation list that is filtered by the status of the invitation.
 
@@ -75,7 +75,7 @@ const { data, totalCount } = await clerkClient.organizations.getOrganizationInvi
 });
 ```
 
-### `getOrganizationInvitationList({ limit })`
+### `getOrganizationInvitationList({ organizationId, limit })`
 
 Retrieves organization invitation list that is filtered by the number of results.
 
@@ -89,7 +89,7 @@ const { data, totalCount } = await clerkClient.organizations.getOrganizationInvi
 });
 ```
 
-### `getOrganizationInvitationList({ offset })`
+### `getOrganizationInvitationList({ organizationId, offset })`
 
 Retrieves organization invitation list that is filtered by the number of results to skip.
 
