--- a/docs/references/backend/organization/get-organization-list.mdx
+++ b/docs/references/backend/organization/get-organization-list.mdx
@@ -19,9 +19,9 @@ function getOrganizationList: (params: GetOrganizationListParams) => Promise<Pag
 | `offset?` | `number` | The number of results to skip. |
 | `query?` | `string` | A search query to filter organizations by. |
 
-## `getOrganizationList()` Examples
+## `getOrganizationList()` examples
 
-### `getOrganizationList()` With No Parameters
+### `getOrganizationList()` with no parameters
 
 ```tsx
 const response = await clerkClient.organizations.
