--- a/docs/references/backend/organization/get-organization-membership-list.mdx
+++ b/docs/references/backend/organization/get-organization-membership-list.mdx
@@ -19,9 +19,9 @@ function getOrganizationMembershipList: (params: GetOrganizationMembershipListPa
 | `limit?` | `number` | The number of results to return. Must be an integer greater than zero and less than 500. |
 | `offset?` | `number` | The number of results to skip. |
 
-## Examples
+## `getOrganizationMembershipList()` examples
 
-### `getOrganizationMembershipList()` with no parameters
+### `getOrganizationMembershipList({ organizationId })`
 
 ```tsx
 const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
@@ -58,7 +58,7 @@ console.log(response);
 */
 ```
 
-### `getOrganizationMembershipList({ limit })`
+### `getOrganizationMembershipList({ organizationId, limit })`
 
 Retrieves organization membership list that is filtered by the number of results.
 
@@ -72,7 +72,7 @@ const { data, totalCount } = await clerkClient.organizations.getOrganizationMemb
 });
 ```
 
-### `getOrganizationMembershipList({ offset })`
+### `getOrganizationMembershipList({ organizationId, offset })`
 
 Retrieves organizaiton membership list that is filtered by the number of results to skip.
 
