--- a/docs/references/backend/organization/revoke-organization-invitation.mdx
+++ b/docs/references/backend/organization/revoke-organization-invitation.mdx
@@ -19,7 +19,7 @@ function revokeOrganizationInvitation: (params: RevokeOrganizationInvitationPara
 | `invitationId` | `string` | The ID of the invitation to be revoked. |
 | `requestingUserId` | `string` | The ID of the user revoking the organization invitation. |
 
-## `revokeOrganizationInvitation()` Example
+## `revokeOrganizationInvitation()` example
 
 ```tsx
 const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
