--- a/docs/references/backend/organization/update-organization-membership.mdx
+++ b/docs/references/backend/organization/update-organization-membership.mdx
@@ -19,7 +19,7 @@ function updateOrganizationMembership: (params: UpdateOrganizationMembershipPara
 | `userId` | `string` | The ID of the user. |
 | `role` | `string` | The [role](/docs/organizations/roles-permissions) to assign user. |
 
-## `updateOrganizationMembership()` Example
+## `updateOrganizationMembership()` example
 
 ```tsx
 const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
