--- a/docs/references/backend/organization/update-organization-metadata.mdx
+++ b/docs/references/backend/organization/update-organization-metadata.mdx
@@ -19,7 +19,7 @@ function updateOrganizationMetadata: (organizationId: string, params: UpdateOrga
 | `publicMetadata?` | `Record<string, unknown>` | Metadata saved on the organization, that is visible to both your Frontend and Backend APIs. |
 | `privateMetadata?` | `Record<string, unknown>` | Metadata saved on the organization that is only visible to your Backend API. |
 
-## `updateOrganizationMetadata()` Example
+## `updateOrganizationMetadata()` example
 
 {/* TODO: Is returning a pending promise. need someone to help check this.. and then when I get this organization (using getOrganization), the metadata is not updated. so this is definitely not running correctly. */}
 
