--- a/docs/references/backend/user/create-user.mdx
+++ b/docs/references/backend/user/create-user.mdx
@@ -28,7 +28,7 @@ function createUser: (params: CreateUserParams) => Promise<User>;
 | `privateMetadata?` | `Record<string, unknown>` | Metadata saved on the user that is only visible to your Backend API. |
 | `unsafeMetadata?` | `Record<string, unknown>` | Metadata saved on the user, that can be updated from both the Frontend and Backend APIs. **Note:** Since this data can be modified from the frontend, it is not guaranteed to be safe. |
 
-## `createUser()` Example
+## `createUser()` example
 
 ```tsx
 const response = await clerkClient.users.createUser({
