--- a/docs/references/backend/user/delete-user.mdx
+++ b/docs/references/backend/user/delete-user.mdx
@@ -11,13 +11,13 @@ Deletes a user given a valid ID.
 function deleteUser: (userId: string) => Promise<User>;
 ```
 
-## `deleteUser()` Parameters
+## `deleteUser()` parameters
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `userId` | `string` | The ID of the user to delete. |
 
-## `deleteUser()` Example
+## `deleteUser()` example
 
 ```tsx
 const userId = 'user_2b8lKxzUgn5M1hsjaTW1mcjc0iB';
