--- a/docs/references/backend/user/get-user.mdx
+++ b/docs/references/backend/user/get-user.mdx
@@ -11,13 +11,13 @@ Retrieves a single user by their ID, if the ID is valid.
 function getUser: (sessionId: string) => Promise<User>;
 ```
 
-## `getUser()` Parameters
+## `getUser()` parameters
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `userId` | `string` | The ID of the user to retrieve. |
 
-## `getUser()` Example
+## `getUser()` example
 
 ```tsx
 const userId = 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56';
