--- a/docs/references/backend/user/update-user.mdx
+++ b/docs/references/backend/user/update-user.mdx
@@ -30,7 +30,7 @@ function updateUser: (userId: string, params: UpdateUserParams) => Promise<User>
 | `privateMetadata?` | `Record<string, unknown>` | Metadata saved on the user that is only visible to your Backend API. |
 | `unsafeMetadata?` | `Record<string, unknown>` | Metadata saved on the user, that can be updated from both the Frontend and Backend APIs. **Note:** Since this data can be modified from the frontend, it is not guaranteed to be safe. |
 
-## `updateUser()` Examples
+## `updateUser()` example
 
 ```tsx
 const userId = 'user_2b8kQleSRNmcOSCdJ1Y8pSRr4mK';
@@ -75,7 +75,7 @@ _User {
 */
 ```
 
-### `updateUser()` Examples with Frameworks
+### `updateUser()` examples with frameworks
 
 <Tabs type="framework" items={["Next.js", "Node", "Remix"]}>
   <Tab>
