--- a/docs/references/backend/client/get-client.mdx
+++ b/docs/references/backend/client/get-client.mdx
@@ -11,13 +11,13 @@ Retrieves a single [`Client`](/docs/references/javascript/client) by its ID, if 
 function getClient: (clientId: string) => Promise<Client>;
 ```
 
-## `getClient()` Parameters
+## `getClient()` parameters
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `clientId` | `string` | The ID of the client to retrieve. |
 
-## `getClient()` Example
+## `getClient()` example
 
 ```tsx
 const clientId = 'client_2b6J9fCrQt0KRCCtFu7WCIQvSfd';
