--- a/docs/references/backend/client/verify-client.mdx
+++ b/docs/references/backend/client/verify-client.mdx
@@ -11,13 +11,13 @@ Retrieves a [`Client`](/docs/references/javascript/client) for a given session t
 function verifyClient: (token: string) => Promise<Client>;
 ```
 
-## `verifyClient()` Parameters
+## `verifyClient()` parameters
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `token` | `string` | The session token to verify. |
 
-## `verifyClient()` Example
+## `verifyClient()` example
 
 ```tsx
 const token = 'my-session-token';
