--- a/docs/references/backend/invitations/create-invitation.mdx
+++ b/docs/references/backend/invitations/create-invitation.mdx
@@ -21,7 +21,7 @@ function createInvitation: (params: CreateParams) => Promise<Invitation>;
 | `redirectUrl?` | `string` | The URL to redirect the user to after they accept the invitation. |
 | `publicMetadata?` | `Record<string, unknown>` | Metadata saved on the invitation that is visible to both your Frontend and Backend APIs. | 
 
-## `createInvitation()` Example
+## `createInvitation()` example
 
 ```tsx
 const response = await clerkClient.invitations.createInvitation({
