--- a/docs/references/backend/invitations/revoke-invitation.mdx
+++ b/docs/references/backend/invitations/revoke-invitation.mdx
@@ -15,13 +15,13 @@ Only active (i.e. non-revoked) invitations can be revoked.
 function revokeInvitation: (invitationId: string) => Promise<Invitation>;
 ```
 
-## `revokeInvitation()` Parameters
+## `revokeInvitation()` parameters
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `invitationId` | `string` | The ID of the invitation to revoke. |
 
-## `revokeInvitation()` Example
+## `revokeInvitation()` example
 
 ```tsx
 const invitationId = 'inv_some-id';
