--- a/docs/references/backend/organization/get-organization.mdx
+++ b/docs/references/backend/organization/get-organization.mdx
@@ -17,9 +17,9 @@ function getOrganization: (params: GetOrganizationParams) => Promise<Organizatio
 | --- | --- | --- |
 | `organizationId \| slug` | `string` | The ID of the organization to retrieve, or the slug of the organization to retrieve. |
 
-## `getOrganization()` Examples
+## `getOrganization()` examples
 
-### `getOrganization()` With No Parameters 
+### `getOrganization()` with no parameters 
 
 ```tsx
 const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
@@ -46,7 +46,7 @@ Organization {
 */
 ```
 
-### `getOrganization(slug)`
+### `getOrganization({ slug })`
 
 Retrieve an organization by its slug instead of its ID.
 
