--- a/docs/references/backend/organization/update-organization-membership-metadata.mdx
+++ b/docs/references/backend/organization/update-organization-membership-metadata.mdx
@@ -20,7 +20,7 @@ function updateOrganizationMembershipMetadata: (params: UpdateOrganizationMember
 | `publicMetadata?` | `Record<string, unknown>` | Metadata saved on the organization, that is visible to both your Frontend and Backend APIs. |
 | `privateMetadata?` | `Record<string, unknown>` | Metadata saved on the organization that is only visible to your Backend API. |
 
-## `updateOrganizationMembershipMetadata()` Example
+## `updateOrganizationMembershipMetadata()` example
 
 {/* TODO: The response on this was a pending promise? Idk, this needs to get looked at */}
 
