--- a/docs/references/backend/user/get-count.mdx
+++ b/docs/references/backend/user/get-count.mdx
@@ -25,9 +25,9 @@ The total count of users can be filtered down by adding one or more of these par
 | `userId?` | `string` | The user ID's to filter by. |
 | `externalId?` | `string[]` | The external ID's to filter by. |
 
-## `getCount()` Examples
+## `getCount()` examples
 
-### `getCount()` With No Parameters
+### `getCount()` with no parameters
 
 ```tsx
 const response = await clerkClient.users.getCount();
