--- a/docs/references/backend/user/get-user-list.mdx
+++ b/docs/references/backend/user/get-user-list.mdx
@@ -26,9 +26,9 @@ function getUserList(): (params: UserListParams) => Promise<PaginatedResourceRes
 | `userId?` | `string[]` | The user ID's to filter by. |
 | `externalId?` | `string[]` | The external ID's to filter by. |
 
-## `getUserList()` Examples
+## `getUserList()` examples
 
-### `getUserList()` With No Parameters
+### `getUserList()` with no parameters
 
 ```tsx
 const response = await clerkClient.users.getUserList();
