--- a/docs/authentication/social-connections/x-twitter.mdx
+++ b/docs/authentication/social-connections/x-twitter.mdx
@@ -1,47 +1,90 @@
 ---
-title: X/Twitter v2
-description: Learn how to set up social connection with X/Twitter v2.
+title: Set up a social connection with X/Twitter v2
+description: Learn how to set up a social connection with X/Twitter v2 in your Clerk application.
 ---
 
-# Twitter v2
-
-How to set up social connection with Twitter v2
+<TutorialHero 
+  beforeYouStart={[
+    {
+      title: 'Create a Clerk application in your Clerk Dashboard',
+      link: 'https://clerk.com/docs/quickstarts/setup-clerk',
+    },
+    {
+      title: 'Create an X/Twitter developer account',
+      link: 'https://developer.twitter.com/en/docs/apps/overview',
+    },
+  ]}
+>
+- Create an X/Twitter application
+- Enable X/Twitter as a social connection
+- Set Clerk's **Authorized Redirect URI** in your X/Twitter application
+- Set X/Twitter's **API key** and **API secret key** in your Clerk Dashboard
+</TutorialHero>
 
 ## Overview
 
-Adding social connection with X/Twitter to your app with Clerk is done in a few steps - you only need to set the **Client ID**, **Client Secret** and **Authorized Redirect URI** in your instance settings.
-
-Clerk does not currently support preconfigured shared OAuth credentials for X/Twitter on development instances. You will have to provide custom credentials for both development *and* production instances, which includes generating your own Client ID and Client Secret using your Twitter Developer account. Don't worry, this guide will walk you through that process in just a few simple steps.
-
-> The purpose of this guide is to help you create a X/Twitter account and a X/Twitter OAuth app - if you're looking for step-by-step instructions using Clerk to add social connection (OAuth) to your application, follow the [Social connection (OAuth) guide](/docs/authentication/social-connections/oauth).
+Clerk does not currently support preconfigured shared OAuth credentials for X/Twitter on development instances. This means you will have to provide custom credentials for both development *and* production instances, which includes generating your own **API key** and **API secret key** using your X/Twitter Developer account. Don't worry, this tutorial will walk you through that process in just a few simple steps.
 
 <Callout type="warning">
-  X/Twitter v2 is currently not providing email addresses of users. User will have to fill in their email address manually, when they return to your application after authenticating with X/Twitter.
+  X/Twitter v2 is currently not providing email addresses of users. The user will have to fill in their email address manually when they return to your application after authenticating with X/Twitter.
 </Callout>
 
-## Before you start
+<Steps>
 
-- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.com/). For more information, check out our [Set up your application guide](/docs/quickstarts/setup-clerk).
-- You need to have a X/Twitter Application set up so it can be used for Social connection. If you don't have a X/Twitter Application, click [here](https://developer.twitter.com/en/docs/apps/overview) for instructions on how to create one.
+### Create an X/Twitter application
 
-## Configuring X/Twitter social connection
+If you don't have an existing X/Twitter application you've set up for social connection, you need to register a new one at the [Twitter Developer Portal](https://developer.twitter.com/en/portal/dashboard). Note that the process requires approval from Twitter before your new application can be used.
 
-If you don't have an existing Twitter Application you've set up for social connection, you need to register a new one at the [Twitter Developer Portal](https://developer.twitter.com/en/portal/dashboard). Note that the process requires approval from Twitter before your new application can be used.
+To create a new X/Twitter application, navigate to the Twitter Developer Portal and go to [**Projects & Apps**](https://developer.twitter.com/en/portal/projects-and-apps). Select **+ Add App**. After entering a name, you will be presented with your app's credentials. However, for setting up the X/Twitter v2 social connection with Clerk, **you won't need these credentials**. This is because you will be utilizing the OAuth 2.0 flow, which relies on different authentication details.
 
-To do so, go to "[Projects & Apps](https://developer.twitter.com/en/portal/projects-and-apps)" and click "**+ Add App**" to create a new application. After entering a name, you'll be presented with your app's credentials. However, for setting up the X/Twitter v2 social connection with Clerk, you won't need these credentials. This is because we'll be utilizing the OAuth 2.0 flow, which relies on different authentication details.
+### Enable X/Twitter as a social connection
 
-In the Clerk Dashboard, go to **User & Authentication > [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections)** and enable **X/Twitter v2** (not Twitter v1). In the modal that opened, copy the **Redirect URIs**.
+To enable X/Twitter as a social connection for your Clerk application, go to the Clerk Dashboard. Navigate to **User & Authentication > [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections)**. From the list of OAuth vendors, toggle on the X/Twitter option. 
 
-Navigate to your application settings screen and scroll down to the **User authentication settings** section and click **Set up**.
+In the modal that opened, copy the **Authorized redirect URI**. Keep this modal and page open.
 
+<Images
+  width={1512}
+  height={822}
+  src="/docs/images/authentication-providers/x-twitter/redirect-uri.webp"
+  alt="The X/Twitter settings modal in the Clerk Dashboard. An arrow marked '1' is pointing to the 'Redirect URI' copy button."
+/>
+
+### Set the Authorized Redirect URI in your X/Twitter application
+
+Navigate back to the X/Twitter Developer portal. On the application settings screen, scroll down to the **User authentication settings** section and select **Set up**.
+
+{/* TODO (Alexis): Update screenshot with Figma assets */}
 ![Setting up User Authentication settings of a Twitter app](/docs/images/authentication-providers/x-twitter/set-up-user-authentication-settings.png)
 
-In the next screen you'll be presented with the user authentication settings. Select **Web App, Automated App or Bot** under **Type of App**.
+In the next screen, you'll be presented with the **User authentication settings** page. Under **App permissions**, you can choose the permissions you want to request from the user. For this tutorial, we'll be using the **Read** permission. Under **Type of App**, select **Web App, Automated App or Bot**.
 
-Also, enter the **Redirect URI** that you grabbed in the previous step from your Clerk instance's settings and insert it in the **Callback URI** setting. Your app's settings should like similar to the ones below. Fill any other required fields and click save.
+Under **App info**, in the **Callback URI / Redirect URL** input, paste the **Authorized Redirect URI** value you copied from the Clerk Dashboard in the last step. Your app's settings should like similar to the ones below. Fill any other required fields, such as the **Website URL**, and select **Save**.
 
+{/* TODO (Alexis): Update screenshot with Figma assets */}
 ![Fill in the User Authentication Settings](/docs/images/authentication-providers/x-twitter/fill-user-authentication-settings.png)
 
-Click **Save** and now you should be able to see your **Client ID** and **Client Secret**. Copy those values and paste them in your Clerk instance's settings and click **Save**.
+### Set the API key and API secret key in your Clerk Dashboard
 
-Congratulations! Social connection with X/Twitter is now configured for your instance.
+After setting up your X/Twitter application, you should be able to copy your **API key** and **API secret key**. 
+
+{/* TODO: Insert screenshot of the page where the API key and API secret key are located. */}
+
+Go back to the Clerk Dashboard, where the modal should still be open, and paste these values into the respective fields.
+
+<Callout type="info">
+  If the modal or page is not still open, go to the Clerk Dashboard and navigate to **User & Authentication > [Social Connections](https://dashboard.clerk.com/last-active?path=user-authentication/social-connections)**. Click on the settings cog icon next to the LinkedIn option. You can now paste the **API key** and **API secret key** into their respective fields.
+</Callout>
+
+<Images
+  width={1512}
+  height={822}
+  src="/docs/images/authentication-providers/x-twitter/paste-credentials.webp"
+  alt="The X/Twitter settings modal in the Clerk Dashboard. There is an arrow marked '1' pointing to the 'API key' and an arrow marked '2' pointing to the 'API secret key' inputs."
+/>
+
+### Finished 🎉
+
+Congratulations! Social connection with LinkedIn is now configured for your Clerk application.
+
+</Steps>
