--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -176,8 +176,6 @@ The [`<SignInButton />`](/docs/components/unstyled/sign-in-button) and [`<SignOu
 
 Add a `<SignInButton />` inside the content wrapped by `<SignedOut>` so people have an option to sign in. And add a `<SignOutButton />` inside the content wrapped by `<SignedIn>` to let users who are signed in sign out. 
 
-Notice the `afterSignOutUrl` prop being passed to `<SignOutButton />`. The `afterSignOutUrl` prop lets you customize what page the user will be redirected to after sign out. In this example, the user is redirected to the homepage (`/`) of the application.
-
 ```tsx filename="src/App.tsx" {1, 8, 12}
 import { SignOutButton, SignInButton, SignedIn, SignedOut } from "@clerk/clerk-react"
 
@@ -190,7 +188,7 @@ function App() {
         <p>This content is public. Only signed out users can see the SignInButton above this text.</p>
       </SignedOut>
       <SignedIn>
-        <SignOutButton afterSignOutUrl="/" />
+        <SignOutButton />
         <p>This content is private. Only signed in users can see the SignOutButton above this text.</p>
       </SignedIn>
     </div>
