--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -3,13 +3,13 @@ title: Add authentication and user management to your React app with Clerk
 description: Learn how to use Clerk to quickly and easily add secure authentication and user management to your React application.
 ---
 
-<TutorialHero 
+<TutorialHero
   framework="react"
-  exampleRepo={[ 
+  exampleRepo={[
     {
       title: "React Quickstart Repo",
       link: "https://github.com/clerk/clerk-react-quickstart"
-      
+
     }
   ]}
   beforeYouStart={[
@@ -71,7 +71,7 @@ Clerk's React SDK gives you access to prebuilt [components](/docs/components/ove
   ```bash filename="terminal"
   yarn add @clerk/clerk-react
   ```
-  
+
   ```bash filename="terminal"
   pnpm add @clerk/clerk-react
   ```
@@ -120,7 +120,7 @@ ReactDOM.createRoot(document.getElementById('root')!).render(
 
 ### Wrap your app in `<ClerkProvider />`
 
-The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides active session and user context to Clerk's hooks and other components. Import it into your app by adding `import { ClerkProvider } from '@clerk/clerk-react'` at the top of your `/src/main.tsx` file. 
+The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides active session and user context to Clerk's hooks and other components. Import it into your app by adding `import { ClerkProvider } from '@clerk/clerk-react'` at the top of your `/src/main.tsx` file.
 ```tsx filename="src/main.tsx" {5, 16, 18}
 import React from 'react'
 import ReactDOM from 'react-dom/client'
@@ -174,9 +174,7 @@ Start your React application via `npm run dev` and visit [`http://localhost:5173
 
 The [`<SignInButton />`](/docs/components/unstyled/sign-in-button) and [`<SignOutButton />`](/docs/components/unstyled/sign-out-button) are components that you can use to either create a basic button or to wrap around your styled button and turn it into a sign-in or sign-out button.
 
-Add a `<SignInButton />` inside the content wrapped by `<SignedOut>` so people have an option to sign in. And add a `<SignOutButton />` inside the content wrapped by `<SignedIn>` to let users who are signed in sign out. 
-
-Notice the `signOutCallback` prop being passed to `<SignOutButton />`. The `signOutCallback` prop lets you customize the behaviour of your app after sign out. In this example, the user is redirected to the homepage (`/`) of the application. Replace the `redirect` function with the one respective one of your router.
+Add a `<SignInButton />` inside the content wrapped by `<SignedOut>` so people have an option to sign in. And add a `<SignOutButton />` inside the content wrapped by `<SignedIn>` to let users who are signed in sign out.
 
 ```tsx filename="src/App.tsx" {1, 8, 12}
 import { SignOutButton, SignInButton, SignedIn, SignedOut } from "@clerk/clerk-react"
@@ -190,7 +188,7 @@ function App() {
         <p>This content is public. Only signed out users can see the SignInButton above this text.</p>
       </SignedOut>
       <SignedIn>
-        <SignOutButton signOutCallback={() => redirect('/')} />
+        <SignOutButton />
         <p>This content is private. Only signed in users can see the SignOutButton above this text.</p>
       </SignedIn>
     </div>
@@ -215,7 +213,7 @@ Congratulations! Your app is now using Clerk to authenticate users. But this is 
 
 ## Next step: Add routing with React Router
 
-React has many options for handling routing, and you are free to choose the option that suits you best. If you would like to learn how to integrate React Router's latest Data API-based router (nicknamed Data Router), please see the [Add React Router to your Clerk Powered application](/docs/references/react/add-react-router) guide. 
+React has many options for handling routing, and you are free to choose the option that suits you best. If you would like to learn how to integrate React Router's latest Data API-based router (nicknamed Data Router), please see the [Add React Router to your Clerk Powered application](/docs/references/react/add-react-router) guide.
 
 You can also learn more about Clerk components, how to customize them, and how to use Clerk's client side helpers. The following guides are good places to start.
 
