--- a/docs/components/organization/create-organization.mdx
+++ b/docs/components/organization/create-organization.mdx
@@ -23,7 +23,7 @@ The `<CreateOrganization />` component is used to render an organization creatio
       import { CreateOrganization } from "@clerk/nextjs";
 
       export default function CreateOrganizationPage() {
-        return <CreateOrganization />;
+        return <CreateOrganization path="/create-organization" />;
       }
       ```
 
@@ -32,7 +32,7 @@ The `<CreateOrganization />` component is used to render an organization creatio
 
       export default function CreateOrganizationPage() {
         return (
-            <CreateOrganization routing="path" path="/create-organization" />
+            <CreateOrganization path="/create-organization" />
         )
       }
       ```
@@ -44,7 +44,7 @@ The `<CreateOrganization />` component is used to render an organization creatio
     import { CreateOrganization } from "@clerk/clerk-react";
 
     export default function CreateOrganizationPage() {
-      return <CreateOrganization />;
+      return <CreateOrganization path="/create-organization" />;
     }
     ```
   </Tab>
@@ -54,7 +54,7 @@ The `<CreateOrganization />` component is used to render an organization creatio
     import { CreateOrganization } from "@clerk/remix";
 
     export default function CreateOrganizationPage() {
-      return <CreateOrganization />;
+      return <CreateOrganization path="/create-organization" />;
     }
     ```
   </Tab>
@@ -67,8 +67,8 @@ All props below are optional.
 | Name | Type | Description |
 | --- | --- | --- |
 | `afterCreateOrganizationUrl` | `string` | Full URL or path to navigate after creating a new organization. |
-| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. |
-| `path` | `string` | The path where the component is mounted when path-based routing is used. -e.g. /create-org. This prop is ignored in hash and virtual based routing. |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. Defaults to `'path'`. |
+| `path` | `string` | The path where the component is mounted when path-based routing is used. <br />For example, `/create-org`<br />This prop is ignored in hash- and virtual-based routing. |
 | `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
 
 ## Customization
