--- a/docs/components/customization/user-profile.mdx
+++ b/docs/components/customization/user-profile.mdx
@@ -26,7 +26,7 @@ Custom pages can be rendered inside the `<UserProfile />` component and provide 
 
 To add a custom page to the `<UserProfile />` component, use the `<UserButton.UserProfilePage />` component or the `<UserProfile.Page />` component, depending on your use case.
 
-### Props
+### `<UserProfile.Page />` Props
 
 `<UserButton.UserProfilePage />` and `<UserProfile.Page />` accept the following props, all of which are *required*:
 
