feat: Override types for roles and permissions (corrections)

--- a/docs/organizations/verify-user-permissions.mdx
+++ b/docs/organizations/verify-user-permissions.mdx
@@ -330,15 +330,36 @@ You can pass a `role` the same way you can pass a `permission` in all the exampl
 </Tabs>
 
 
-## Add global TypeScript type for roles and permissions
+## Add the global ClerkAuthorization type for roles and permissions
 
+Clerk allows for custom roles and permissions. By default types related to roles and permissions such `OrganizationCustomRoleKey` and `OrganizationCustomPermissionKey` will be assigned to `string`.
+In order to enhance typesafety in your project you can provide your own roles and permissions that reflect your custom bussiness logic.
+
+<Tabs type="clerk-authorization-types" items={[ "Default roles","Custom roles and permissions"]}>
+
+<Tab>
 ```tsx filename="types/globals.d.ts"
 export { };
 
 declare global {
   interface ClerkAuthorization {
     permission: '';
-    role: 'admin' | 'basic_member' | 'guest_member';
+    role: 'org:admin' | 'org:member';
   }
 }
 ```
+</Tab>
+
+<Tab>
+```tsx filename="types/globals.d.ts"
+export { };
+
+declare global {
+  interface ClerkAuthorization {
+    permission: 'org:quiz:create' | 'org:quiz:grade' | 'org:quiz:read' | 'org:quiz:fill';
+    role: 'org:super_admin' | 'org:teacher' | 'org:student';
+  }
+}
+```
+</Tab>
+</Tabs>
