--- a/docs/custom-flows/forgot-password.mdx
+++ b/docs/custom-flows/forgot-password.mdx
@@ -1,18 +1,23 @@
 ---
-title: Forgot password
-description: Create a custom forgot password flow for your users.
+title: Create a custom Forgot Password flow using Clerk's API
+description: Create a custom forgot password flow for your users using the lower level methods provided by the ClerkJS SDK.
 ---
 
-# Forgot password
+# Create a custom Forgot Password flow using Clerk's API
 
-Clerk's [prebuilt components](/docs/components/overview) have options that you can configure to help your users who have forgotten a password.
+Clerk's [prebuilt components](/docs/components/overview) provide a **Forgot Password** flow for your users out of the box. However, if you want more control over the user experience, you can create a custom **Forgot Password** flow using the lower-level methods provided by the [ClerkJS SDK](/docs/references/javascript/overview).
 
-If these options will not work for you, or if you want more control of your user's experience, it's possible to create a completely custom **Forgot Password** flow using lower-level methods.
+In the following example, the user is asked to provide their email address. After submitting their email, the user is asked to provide a new password and the password reset code that was sent to their email. The user is then signed in with their new password.
 
-## Example
+Note that this example does not handle error states, and does not handle 2FA (two-factor authentication). If you have 2FA enabled, you will need to handle that separately.
 
-<CodeBlockTabs type="framework" options={["React"]}>
-```jsx
+For the sake of this guide, this example is written for Next.js App Router but it is supported by any React meta framework, such as Remix or Gatsby.
+
+{/* TODO: Update this Next.js example (when reset password is complete, it just has 'You successfully changed your password'.. and that's not even in a p tag or anything.), and add JavaScript example. */}
+
+<CodeBlockTabs type="framework" options={["Next.js"]}>
+```tsx filename="app/forgot-password.tsx"
+"use client"
 import React, { SyntheticEvent, useState } from 'react';
 import { useSignIn } from '@clerk/nextjs';
 import type { NextPage } from 'next';
@@ -72,7 +77,7 @@ const SignInPage: NextPage = () => {
         maxWidth: '500px',
       }}
     >
-      <h1>Forgot Password ?</h1>
+      <h1>Forgot Password?</h1>
       <form
         style={{
           display: 'flex',
@@ -83,7 +88,7 @@ const SignInPage: NextPage = () => {
       >
         {!successfulCreation && !complete && (
           <>
-            <label htmlFor='email'>Please provide identifier</label>
+            <label htmlFor='email'>Please provide your email address</label>
             <input
               type='email'
               placeholder='e.g john@doe.com'
@@ -97,14 +102,14 @@ const SignInPage: NextPage = () => {
 
         {successfulCreation && !complete && (
           <>
-            <label htmlFor='password'>New password</label>
+            <label htmlFor='password'>Enter your new password</label>
             <input
               type='password'
               value={password}
               onChange={e => setPassword(e.target.value)}
             />
 
-            <label htmlFor='password'>Reset password code</label>
+            <label htmlFor='password'>Enter the password reset code that was sent to your email</label>
             <input
               type='text'
               value={code}
@@ -115,7 +120,7 @@ const SignInPage: NextPage = () => {
           </>
         )}
 
-        {complete && 'You successfully changed you password'}
+        {complete && 'You successfully changed your password'}
         {secondFactor && '2FA is required, this UI does not handle that'}
       </form>
     </div>
