--- a/docs/organizations/verify-user-permissions.mdx
+++ b/docs/organizations/verify-user-permissions.mdx
@@ -16,7 +16,7 @@ Clerk provides two kinds of helpers for authorization:
 
 Both kinds of helpers can check a user's role and permissions. The recommended approach is to verify a user's permissions. Roles can be added and removed and their permissions changed. Authorizing by permissions is explicit.
 
-### `has()`
+## `has()`
 
 Clerk's `has()` function can be used on both the frontend and the backend to determine if the user _has_ a role or permission.
 
@@ -260,7 +260,6 @@ If you are not using React or any of the meta-frameworks we support, there's a g
 ```
 </CodeBlockTabs>
 
-
 ## Authorize with roles
 
 <Callout type="warning">
@@ -326,40 +325,5 @@ You can pass a `role` the same way you can pass a `permission` in all the exampl
       )
     }
    ```
-</Tab>
-</Tabs>
-
-
-## Add the global ClerkAuthorization type for roles and permissions
-
-Clerk allows for custom roles and permissions. By default types related to roles and permissions such `OrganizationCustomRoleKey` and `OrganizationCustomPermissionKey` will be assigned to `string`.
-In order to enhance typesafety in your project you can provide your own roles and permissions that reflect your custom bussiness logic.
-
-<Tabs type="clerk-authorization-types" items={[ "Default roles","Custom roles and permissions"]}>
-
-<Tab>
-```tsx filename="types/globals.d.ts"
-export { };
-
-declare global {
-  interface ClerkAuthorization {
-    permission: '';
-    role: 'org:admin' | 'org:member';
-  }
-}
-```
-</Tab>
-
-<Tab>
-```tsx filename="types/globals.d.ts"
-export { };
-
-declare global {
-  interface ClerkAuthorization {
-    permission: 'org:quiz:create' | 'org:quiz:grade' | 'org:quiz:read' | 'org:quiz:fill';
-    role: 'org:super_admin' | 'org:teacher' | 'org:student';
-  }
-}
-```
 </Tab>
 </Tabs>
