check is user is signed in; handle errors

--- a/docs/custom-flows/forgot-password.mdx
+++ b/docs/custom-flows/forgot-password.mdx
@@ -9,33 +9,44 @@ Clerk's [prebuilt components](/docs/components/overview) provide a **Forgot Pass
 
 In the following example, the user is asked to provide their email address. After submitting their email, the user is asked to provide a new password and the password reset code that was sent to their email. The user is then signed in with their new password.
 
-Note that this example does not handle error states, and does not handle 2FA (two-factor authentication). If you have 2FA enabled, you will need to handle that separately.
+Note that this example does not handle 2FA (two-factor authentication). If you have 2FA enabled, you will need to handle that separately.
 
 For the sake of this guide, this example is written for Next.js App Router but it is supported by any React meta framework, such as Remix or Gatsby.
 
-{/* TODO: Update this Next.js example (when reset password is complete, it just has 'You successfully changed your password'.. and that's not even in a p tag or anything.), and add JavaScript example. */}
+{/* TODO: Add JavaScript example. */}
 
 <CodeBlockTabs type="framework" options={["Next.js"]}>
 ```tsx filename="app/forgot-password.tsx"
 "use client"
 import React, { SyntheticEvent, useState } from 'react';
-import { useSignIn } from '@clerk/nextjs';
+import { useAuth, useSignIn } from '@clerk/nextjs';
 import type { NextPage } from 'next';
+import { redirect } from 'next/navigation';
 
-const SignInPage: NextPage = () => {
+const ForgotPasswordPage: NextPage = () => {
   const [email, setEmail] = useState('');
   const [password, setPassword] = useState('');
   const [code, setCode] = useState('');
   const [successfulCreation, setSuccessfulCreation] = useState(false);
   const [complete, setComplete] = useState(false);
   const [secondFactor, setSecondFactor] = useState(false);
+  const [error, setError] = useState('');
 
+  const { isSignedIn } = useAuth();
   const { isLoaded, signIn, setActive } = useSignIn();
 
   if (!isLoaded) {
     return null;
   }
 
+  // If the user is already signed in, 
+  // and they haven't just completed a password reset, 
+  // redirect them to the home page
+  if (isSignedIn && !complete) {
+    redirect('/');
+  }
+
+  // Send the password reset code to the user's email
   async function create(e: SyntheticEvent) {
     e.preventDefault();
     await signIn
@@ -45,10 +56,17 @@ const SignInPage: NextPage = () => {
       })
       .then(_ => {
         setSuccessfulCreation(true);
+        setError('');
       })
-      .catch(err => console.error('error', err.errors[0].longMessage));
+      .catch(err => {
+        console.error('error', err.errors[0].longMessage);
+        setError(err.errors[0].longMessage);
+      });
   }
 
+  // Reset the user's password. 
+  // Upon successful reset, the user will be 
+  // signed in and redirected to the home page
   async function reset(e: SyntheticEvent) {
     e.preventDefault();
     await signIn
@@ -60,14 +78,21 @@ const SignInPage: NextPage = () => {
       .then(result => {
         if (result.status === 'needs_second_factor') {
           setSecondFactor(true);
+          setError('');
         } else if (result.status === 'complete') {
+          // Set the active session to 
+          // the newly created session (user is now logged in)
           setActive({ session: result.createdSessionId });
           setComplete(true);
+          setError('');
         } else {
           console.log(result);
         }
       })
-      .catch(err => console.error('error', err.errors[0].longMessage));
+      .catch(err => {
+        console.error('error', err.errors[0].longMessage)
+        setError(err.errors[0].longMessage);
+      });
   }
 
   return (
@@ -96,7 +121,8 @@ const SignInPage: NextPage = () => {
               onChange={e => setEmail(e.target.value)}
             />
 
-            <button>Sign in</button>
+            <button>Send password reset code</button>
+            {error && <p>{error}</p>}
           </>
         )}
 
@@ -117,16 +143,17 @@ const SignInPage: NextPage = () => {
             />
 
             <button>Reset</button>
+            {error && <p>{error}</p>}
           </>
         )}
 
-        {complete && 'You successfully changed your password'}
-        {secondFactor && '2FA is required, this UI does not handle that'}
+        {complete && <p>You successfully changed your password</p>}
+        {secondFactor && <p>2FA is required, this UI does not handle that</p>}
       </form>
     </div>
   );
 };
 
-export default SignInPage;
+export default ForgotPasswordPage;
 ```
 </CodeBlockTabs>
