Updated sms/email+otp doc

--- a/docs/custom-flows/email-sms-otp.mdx
+++ b/docs/custom-flows/email-sms-otp.mdx
@@ -56,9 +56,10 @@ A successful sign-up consists of the following steps:
 
 Let's see the above in action. If you want to learn more about sign-ups, check out our documentation on Clerk's [sign-up flow](/docs/custom-flows/overview#sign-up-flow).
 
-<Tabs type="framework" items={["Next.js", "React", "JavaScript"]}>
+For the sake of this guide, this example is written for Next.js App Router but it is supported by any React meta framework, such as Remix or Gatsby.
+
+<Tabs type="framework" items={["Next.js", "JavaScript"]}>
   <Tab>
-    <CodeBlockTabs type="router" options={["App Router"]}>
     ```ts filename="app/sign-up/page.tsx"
     'use client'
 
@@ -147,7 +148,6 @@ Let's see the above in action. If you want to learn more about sign-ups, check o
       );
     }
     ```
-    </CodeBlockTabs>
   </Tab>
 
   <Tab>
@@ -226,9 +226,8 @@ So, in essence, when you want to authenticate users in your application, you nee
 
 Let's see the above in action. If you want to learn more about sign-ins, check out our documentation on Clerk's [sign-in flow](/docs/custom-flows/overview#sign-in-flow).
 
-<Tabs type="framework" items={["Next.js", "React", "JavaScript"]}>
+<Tabs type="framework" items={["Next.js","JavaScript"]}>
   <Tab>
-    <CodeBlockTabs type="router" options={["App Router"]}>
       ```tsx filename="app/sign-in/page.tsx"
       'use client'
 
@@ -334,7 +333,6 @@ Let's see the above in action. If you want to learn more about sign-ins, check o
         );
       }
       ```
-    </CodeBlockTabs>
   </Tab>
 
   <Tab>
