chore: import isClerkAPIResponseError from @clerk/clerk-react/errors

--- a/docs/custom-flows/error-handling.mdx
+++ b/docs/custom-flows/error-handling.mdx
@@ -14,8 +14,9 @@ A user is attempting to sign up with your application, but they are attempting t
 <CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
 ```jsx
 import { useState, SyntheticEvent } from "react";
-import { useSignUp, isClerkAPIResponseError } from "@clerk/clerk-react";
+import { useSignUp } from "@clerk/clerk-react";
 import { ClerkAPIError } from '@clerk/types';
+import { isClerkAPIResponseError } from "@clerk/clerk-react/errors";
 
 function Example() {
   const [emailAddress, setEmailAddress] = useState('');
@@ -97,8 +98,9 @@ Errors returned from the [`signIn()`](/docs/references/react/use-sign-in) functi
 <CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
 ```jsx
 import { useState, SyntheticEvent } from "react";
-import { useSignIn, isClerkAPIResponseError } from "@clerk/clerk-react";
+import { useSignIn } from "@clerk/clerk-react";
 import { ClerkAPIError } from '@clerk/types';
+import { isClerkAPIResponseError } from "@clerk/clerk-react/errors";
 
 function Example() {
   const [emailAddress, setEmailAddress] = useState('');
