chore: remove SyntheticEvent, use React.FormEvent instead

--- a/docs/custom-flows/error-handling.mdx
+++ b/docs/custom-flows/error-handling.mdx
@@ -13,9 +13,9 @@ A user is attempting to sign up with your application, but they are attempting t
 
 <CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
 ```jsx
-import { useState, SyntheticEvent } from "react";
+import { useState } from "react";
 import { useSignUp } from "@clerk/clerk-react";
-import { ClerkAPIError } from '@clerk/types';
+import { ClerkAPIError } from "@clerk/types";
 import { isClerkAPIResponseError } from "@clerk/clerk-react/errors";
 
 function Example() {
@@ -25,7 +25,7 @@ function Example() {
 
   const { isLoaded, signUp, setActive } = useSignUp();
 
-  const attemptSignUp = async (e: SyntheticEvent) => {
+  const attemptSignUp = async (e: React.FormEvent) => {
     e.preventDefault();
 
     // clear any errors that may have occured during previous form submission
@@ -97,9 +97,9 @@ Errors returned from the [`signIn()`](/docs/references/react/use-sign-in) functi
 
 <CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
 ```jsx
-import { useState, SyntheticEvent } from "react";
+import { useState } from "react";
 import { useSignIn } from "@clerk/clerk-react";
-import { ClerkAPIError } from '@clerk/types';
+import { ClerkAPIError } from "@clerk/types";
 import { isClerkAPIResponseError } from "@clerk/clerk-react/errors";
 
 function Example() {
@@ -109,7 +109,7 @@ function Example() {
 
   const { isLoaded, signIn, setActive } = useSignIn();
 
-  const attemptSignIn = async (e: SyntheticEvent) => {
+  const attemptSignIn = async (e: React.FormEvent) => {
     e.preventDefault();
 
     // clear any errors that may have occured during previous form submission
