--- a/docs/references/backend/invitations/get-invitation-list.mdx
+++ b/docs/references/backend/invitations/get-invitation-list.mdx
@@ -27,15 +27,18 @@ const response = await clerkClient.invitations.getInvitationList();
 console.log(response);
 /* In this example, you can see that the array of Invitation objects is populated with only one Invitation.
 [
-  _Invitation {
-    id: 'inv_2b6NfrkHKSU6mSYx2FwX4AtzeFi',
-    emailAddress: 'invite@example.com',
-    publicMetadata: [Object],
-    createdAt: 1705531674576,
-    updatedAt: 1705531674576,
-    status: 'pending',
-    revoked: undefined
-  }
+  data: [
+    _Invitation {
+      id: 'inv_2b6NfrkHKSU6mSYx2FwX4AtzeFi',
+      emailAddress: 'invite@example.com',
+      publicMetadata: [Object],
+      createdAt: 1705531674576,
+      updatedAt: 1705531674576,
+      status: 'pending',
+      revoked: undefined
+    }
+  ],
+  totalCount: 1
 ]
 */
 ```
