--- a/docs/references/backend/invitations/revoke-invitation.mdx
+++ b/docs/references/backend/invitations/revoke-invitation.mdx
@@ -24,7 +24,7 @@ function revokeInvitation: (invitationId: string) => Promise<Invitation>;
 ## `revokeInvitation()` example
 
 ```tsx
-const invitationId = 'inv_some-id';
+const invitationId = 'inv_123';
 
 const response = await clerkClient.invitations.revokeInvitation(invitationId);
 
