--- a/docs/references/backend/organization/get-organization-invitation-list.mdx
+++ b/docs/references/backend/organization/get-organization-invitation-list.mdx
@@ -66,7 +66,7 @@ console.log(response);
 Retrieves organization invitation list that is filtered by the status of the invitation.
 
 ```tsx
-const organizationId = 'my-organization-id';
+const organizationId = 'org_123';
 
 const { data, totalCount } = await clerkClient.organizations.getOrganizationInvitationList({
   organizationId,
@@ -80,7 +80,7 @@ const { data, totalCount } = await clerkClient.organizations.getOrganizationInvi
 Retrieves organization invitation list that is filtered by the number of results.
 
 ```tsx
-const organizationId = 'my-organization-id';
+const organizationId = 'org_123';
 
 const { data, totalCount } = await clerkClient.organizations.getOrganizationInvitationList({
   organizationId,
