--- a/docs/references/backend/user/get-organization-membership-list.mdx
+++ b/docs/references/backend/user/get-organization-membership-list.mdx
@@ -1,11 +1,11 @@
 ---
 title: getOrganizationMembershipList()
-description: Retrieves a list of memberships for an organization.
+description: Retrieves a list of organization memberships for a given user.
 ---
 
 # `getOrganizationMembershipList()`
 
-Retrieves a list of memberships for an organization.
+Retrieves a list of organization memberships for a given user.
 
 ```tsx
 function getOrganizationMembershipList: (params: GetOrganizationMembershipListParams) => Promise<PaginatedResourceResponse<OrganizationMembership[]>>;
@@ -15,40 +15,40 @@ function getOrganizationMembershipList: (params: GetOrganizationMembershipListPa
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `organizationId` | `string` | The ID of the organization to retrieve the list of memberships from. |
+| `userId` | `string` | The ID of the user to retrieve the list of organization memberships for. |
 | `limit?` | `number` | The number of results to return. Must be an integer greater than zero and less than 500. |
 | `offset?` | `number` | The number of results to skip. |
 
 ## `getOrganizationMembershipList()` examples
 
-### `getOrganizationMembershipList({ organizationId })`
+### `getOrganizationMembershipList({ userId })`
 
 ```tsx
-const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
+const userId = 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56';
 
-const response = await clerkClient.organizations.getOrganizationMembershipList({ organizationId });
+const response = await clerkClient.users.getOrganizationMembershipList({ userId });
 
 console.log(response);
 /* In this example, you can see that data is an array of OrganizationMembership objects, and is populated with two OrganizationMemberships.
 {
   data: [
     _OrganizationMembership {
-      id: 'orgmem_2b6TUmlDXlo3e9XPq3Wd9EyfIfj',
-      role: 'org:member',
+      id: 'orgmem_2bjJ8KfbbOyzmF4wMRU7kjHvsgI',
+      role: 'org:admin',
       publicMetadata: {},
       privateMetadata: {},
-      createdAt: 1705534546701,
-      updatedAt: 1705534546701,
+      createdAt: 1706722393158,
+      updatedAt: 1706722393158,
       organization: [_Organization],
       publicUserData: [_OrganizationMembershipPublicUserData]
     },
     _OrganizationMembership {
-      id: 'orgmem_2ZUtbeklm2DPSy7jsaLLwf6V8Nq',
+      id: 'orgmem_2bjJ4JMtzPQIBRWQqeFKdJ0fg1s',
       role: 'org:admin',
       publicMetadata: {},
       privateMetadata: {},
-      createdAt: 1702488558867,
-      updatedAt: 1702488558867,
+      createdAt: 1706722361154,
+      updatedAt: 1706722361154,
       organization: [_Organization],
       publicUserData: [_OrganizationMembershipPublicUserData]
     }
@@ -58,29 +58,29 @@ console.log(response);
 */
 ```
 
-### `getOrganizationMembershipList({ organizationId, limit })`
+### `getOrganizationMembershipList({ userId, limit })`
 
-Retrieves organization membership list that is filtered by the number of results.
+Retrieves a list of a user's organization memberships that is filtered by the number of results.
 
 ```tsx
-const organizationId = 'org_123';
+const userId = 'user_123';
 
-const { data, totalCount } = await clerkClient.organizations.getOrganizationMembershipList({
-  organizationId,
+const { data, totalCount } = await clerkClient.users.getOrganizationMembershipList({
+  userId,
   // returns the first 10 memberships
   limit: 10,
 });
 ```
 
-### `getOrganizationMembershipList({ organizationId, offset })`
+### `getOrganizationMembershipList({ userId, offset })`
 
-Retrieves organizaiton membership list that is filtered by the number of results to skip.
+Retrieves a list of a user's organization memberships that is filtered by the number of results to skip.
 
 ```tsx
-const organizationId = 'org_123';
+const userId = 'user_123';
 
-const { data, totalCount } = await clerkClient.organizations.getOrganizationMembershipList({
-  organizationId,
+const { data, totalCount } = await clerkClient.users.getOrganizationMembershipList({
+  userId,
   // skips the first 10 memberships
   offset: 10,
 });
