--- a/docs/references/backend/user/update-user.mdx
+++ b/docs/references/backend/user/update-user.mdx
@@ -80,7 +80,7 @@ _User {
 <Tabs type="framework" items={["Next.js", "Node", "Remix"]}>
   <Tab>
     <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-    ```tsx filename="app/page.[jsx/tsx]"
+    ```tsx filename="app/page.tsx"
     import { NextRequest, NextResponse } from 'next/server';
     import { getAuth, clerkClient } from '@clerk/nextjs/server';
 
@@ -101,7 +101,7 @@ _User {
     }
     ```
 
-    ```tsx filename="pages/api/updateUser.[jsx/tsx]"
+    ```tsx filename="pages/api/updateUser.tsx"
     import { clerkClient, getAuth } from '@clerk/nextjs/server';
     import type { NextApiRequest, NextApiResponse } from 'next';
 
@@ -150,7 +150,7 @@ _User {
   </Tab>
 
   <Tab>
-  ```js filename="app/routes/profile.[jsx/tsx]"
+  ```js filename="app/routes/profile.tsx"
   import { createClerkClient } from "@clerk/remix/api.server"
   import { getAuth } from "@clerk/remix/ssr.server"
   import { ActionFunction, json } from "@remix-run/node"
