numbered points should be bullet points; update heading for clarity

--- a/docs/concepts/client-handshake.mdx
+++ b/docs/concepts/client-handshake.mdx
@@ -36,14 +36,14 @@ The handshake mechanism operates by way of a redirect from the host application 
   A handshake is only triggered if a request is determined to be a document request (detected by the presence of the `Sec-Fetch-Dest: document` header, or `Accept: text/html`). Otherwise, the request is treated as `signed-out`.
 </Callout>
 
-1. Development instance and a dev browser is detected in URL 
+- Development instance and a dev browser is detected in URL 
 [(URL-based session sync)](https://clerk.com/docs/upgrade-guides/url-based-session-syncing#url-based-session-syncing)
-2. Production instance and request is being made to a satellite application
-3. The current browser has a session token (`__session`), but no active client is detected (`__client_uat` = 0 or missing)
-4. The current browser has an active client (`__client_uat` > 0) but no session token
-5. The `client_uat` cookie indicating the latest timestamp a client was updated, is more recent than current session token issued at timestamp (`__client_uat` > `sessionToken.iat`)
-6. The `__session` token cookie exists but is expired
-7. The `__session` token cookie exists but is not active yet
+- Production instance and request is being made to a satellite application
+- The current browser has a session token (`__session`), but no active client is detected (`__client_uat` = 0 or missing)
+- The current browser has an active client (`__client_uat` > 0) but no session token
+- The `client_uat` cookie indicating the latest timestamp a client was updated, is more recent than current session token issued at timestamp (`__client_uat` > `sessionToken.iat`)
+- The `__session` token cookie exists but is expired
+- The `__session` token cookie exists but is not active yet
 
 ## Handshake architecture
 
@@ -52,7 +52,7 @@ The handshake flow is composed of two main pieces:
 1. The FAPI [`/client/handshake` endpoint](https://clerk.com/docs/reference/frontend-api/tag/Client#operation/handshakeClient)
 2. The `@clerk/backend` `authenticateRequest()` method. The isomorphic `@clerk/backend` SDK is used by all framework specific Clerk SDKs such as `@clerk/nextjs`.
 
-### Handshake payload
+### Handshake payload for `/client/handshake` endpoint
 
 The handshake payload is a signed JWT that contains an array of `set-cookie` header directives. This allows us to transfer cookies from the FAPI domain to the application’s domain across environments without additional cookie setting logic embedded into our SDKs. In development, the payload is transported in the URL in a `__clerk_handshake` query parameter. In production, the payload is transported in a `__clerk_handshake` cookie. On returning from the handshake endpoint, the handshake payload is parsed and the cookie directives are set on the final response.
 
