apply roy's code review suggestions

--- a/docs/custom-flows/forgot-password.mdx
+++ b/docs/custom-flows/forgot-password.mdx
@@ -9,7 +9,7 @@ Clerk's [prebuilt components](/docs/components/overview) provide a **Forgot Pass
 
 In the following example, the user is asked to provide their email address. After submitting their email, the user is asked to provide a new password and the password reset code that was sent to their email. The user is then signed in with their new password.
 
-Note that this example does not handle 2FA (two-factor authentication). If you have 2FA enabled, you will need to handle that separately.
+Note that this example's user interface does not handle 2FA (two-factor authentication). If it detects that 2FA is needed for the account trying to reset the password, it will display a message to the user that says "2FA is required, but this UI does not handle that".
 
 For the sake of this guide, this example is written for Next.js App Router but it is supported by any React meta framework, such as Remix or Gatsby.
 
@@ -18,20 +18,20 @@ For the sake of this guide, this example is written for Next.js App Router but i
 <CodeBlockTabs type="framework" options={["Next.js"]}>
 ```tsx filename="app/forgot-password.tsx"
 "use client"
-import React, { SyntheticEvent, useState } from 'react';
+import React, { useState } from 'react';
 import { useAuth, useSignIn } from '@clerk/nextjs';
 import type { NextPage } from 'next';
-import { redirect } from 'next/navigation';
+import { useRouter } from 'next/navigation';
 
 const ForgotPasswordPage: NextPage = () => {
   const [email, setEmail] = useState('');
   const [password, setPassword] = useState('');
   const [code, setCode] = useState('');
   const [successfulCreation, setSuccessfulCreation] = useState(false);
-  const [complete, setComplete] = useState(false);
   const [secondFactor, setSecondFactor] = useState(false);
   const [error, setError] = useState('');
 
+  const router = useRouter();
   const { isSignedIn } = useAuth();
   const { isLoaded, signIn, setActive } = useSignIn();
 
@@ -39,15 +39,14 @@ const ForgotPasswordPage: NextPage = () => {
     return null;
   }
 
-  // If the user is already signed in, 
-  // and they haven't just completed a password reset, 
+  // If the user is already signed in,
   // redirect them to the home page
-  if (isSignedIn && !complete) {
-    redirect('/');
+  if (isSignedIn) {
+    router.push('/');
   }
 
   // Send the password reset code to the user's email
-  async function create(e: SyntheticEvent) {
+  async function create(e: React.FormEvent) {
     e.preventDefault();
     await signIn
       ?.create({
@@ -67,7 +66,7 @@ const ForgotPasswordPage: NextPage = () => {
   // Reset the user's password. 
   // Upon successful reset, the user will be 
   // signed in and redirected to the home page
-  async function reset(e: SyntheticEvent) {
+  async function reset(e: React.FormEvent) {
     e.preventDefault();
     await signIn
       ?.attemptFirstFactor({
@@ -76,6 +75,7 @@ const ForgotPasswordPage: NextPage = () => {
         password,
       })
       .then(result => {
+        // Check if 2FA is required
         if (result.status === 'needs_second_factor') {
           setSecondFactor(true);
           setError('');
@@ -83,7 +83,6 @@ const ForgotPasswordPage: NextPage = () => {
           // Set the active session to 
           // the newly created session (user is now logged in)
           setActive({ session: result.createdSessionId });
-          setComplete(true);
           setError('');
         } else {
           console.log(result);
@@ -111,7 +110,7 @@ const ForgotPasswordPage: NextPage = () => {
         }}
         onSubmit={!successfulCreation ? create : reset}
       >
-        {!successfulCreation && !complete && (
+        {!successfulCreation && (
           <>
             <label htmlFor='email'>Please provide your email address</label>
             <input
@@ -126,7 +125,7 @@ const ForgotPasswordPage: NextPage = () => {
           </>
         )}
 
-        {successfulCreation && !complete && (
+        {successfulCreation && (
           <>
             <label htmlFor='password'>Enter your new password</label>
             <input
@@ -147,8 +146,7 @@ const ForgotPasswordPage: NextPage = () => {
           </>
         )}
 
-        {complete && <p>You successfully changed your password</p>}
-        {secondFactor && <p>2FA is required, this UI does not handle that</p>}
+        {secondFactor && <p>2FA is required, but this UI does not handle that</p>}
       </form>
     </div>
   );
