--- a/docs/upgrade-guides/upgrading-nextjs-from-v4-to-v5.mdx
+++ b/docs/upgrade-guides/upgrading-nextjs-from-v4-to-v5.mdx
@@ -27,15 +27,15 @@ To aid you in this upgrade, Clerk built a CLI called [`@clerk/upgrade`](https://
 
 ## Minimum version requirements
 
-We have updated some of our minumum version requirements for node, react, and nextjs such that versions that are no longer supported or are at end-of-life are no longer guaranteed to work correctly with Clerk. Please take a moment to check your dependencies and ensure you are up to date!
+The minimum version requirements for Node.js, React, and Next.js have been updated. Versions that are no longer supported or are at end-of-life are no longer guaranteed to work correctly with Clerk. Please take a moment to check your dependencies and ensure you are up to date!
 
 #### Updating Node.js
 
-You need to have Node.js `18.17.0` or later installed. Last year, Node.js 16 entered EOL (End of life) status so it's time to bump the required version for `@clerk/nextjs`, too. You can check your node version by running `node -v` in your terminal. Learn more about how to [update and install Node.js](https://nodejs.org/en/learn/getting-started/how-to-install-nodejs).
+You need to have Node.js `18.17.0` or later installed. Last year, Node.js 16 entered EOL (End of life) status so it's time to bump the required version for `@clerk/nextjs`, too. You can check your Node.js version by running `node -v` in your terminal. Learn more about how to [update and install Node.js](https://nodejs.org/en/learn/getting-started/how-to-install-nodejs).
 
 #### Updating React
 
-`@clerk/nextjs` now requires you to use React version `18` or higher. You can update your project by installing the latest version of `react` and `react-dom`.
+`@clerk/nextjs` now requires you to use React 18 or higher. You can update your project by installing the latest version of `react` and `react-dom`.
 
 <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
     ```bash filename="terminal"
@@ -51,16 +51,16 @@ You need to have Node.js `18.17.0` or later installed. Last year, Node.js 16 ent
     ```
 </CodeBlockTabs>
 
-If you are upgrading from react 17 or lower, make sure to [learn about how to upgrade your react version to 18](https://react.dev/blog/2022/03/08/react-18-upgrade-guide) as well.
+If you are upgrading from React 17 or lower, make sure to [learn about how to upgrade to React 18](https://react.dev/blog/2022/03/08/react-18-upgrade-guide) as well.
 
 #### Updating Next.js
 
-`@clerk/nextjs` now requires you to use Next.js version `13.0.4` or later. Check out Next's upgrade guides for more guidance if you have not yet upgraded to next 13:
+`@clerk/nextjs` now requires you to use Next.js `13.0.4` or later. Check out Next's upgrade guides for more guidance if you have not yet upgraded to Next.js 13:
 
 - [Upgrading from 12 to 13](https://nextjs.org/docs/pages/building-your-application/upgrading/version-13)
 - [Upgrading from 13 to 14](https://nextjs.org/docs/app/building-your-application/upgrading/version-14)
 
-## New middleware architecture
+## New Middleware architecture
 
 We have been actively fielding user and customer feedback about `authMiddleware()` and have heard from many that this was a friction point. As such, in v5 we are releasing a completely new middleware helper called [`clerkMiddleware()`](/docs/references/nextjs/clerk-middleware) that we think will alleviate all of the issues folks had with `authMiddleware()`.
 
@@ -142,7 +142,7 @@ A couple things to note here:
 - With `clerkMiddleware`, we are defining the routes we want **to be protected**, rather than the routes we don't want to be protected.
 - We are able to use the same `auth().protect()` helpers that we can use within layouts/pages here in the middleware.
 
-### Migrating to `clerkMiddleware`
+### Migrating to `clerkMiddleware()`
 
 We strongly recommend migrating to the new `clerkMiddleware()` for an improved DX and access to all present and upcoming features, but also want to note that `authMiddleware()`, while deprecated, will continue to work in v5 and will not be removed until the next major version, so you do not _need_ to make any changes to your middleware setup this version.
 
